fixed arrow issue / edited checkbox deisgn and align

--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -15,17 +15,22 @@
 .sign_up_section header {
     display: flex;
     align-items: center;
-    justify-content: center;
     position: relative;
-    gap: 16px;
 }
 
 /* back arrow design and position */
 .sign_up_section .sign_up_back_arrow {
-    position: relative;
-    top: 10px;
-    left: -250px;
     cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: -150px;
+    z-index: 2;
+}
+
+.sign_up_section .sign_up_back_arrow:hover {
+    background-color: #EDF2FA;
+    scale: 1.1;
+    border-radius: 42px;
 }
 
 /* sign up section header h1 and underline align */
@@ -50,7 +55,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 40px;
 }
 
 /* design for each input */
@@ -70,7 +75,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 24px;
 }
 
 /* input focus and placeholder style */
@@ -100,7 +105,25 @@
     pointer-events: none;
 }
 
-/* span design inside inside input group */
+/* privacy policy checkbox align and design */
+.sign_up_section .sign_up_input_group .privacy_policy_checkbox_group {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #7A7A7A;
+    gap: 8px;
+}
+
+.sign_up_section .sign_up_input_group .privacy_policy_checkbox_group .pp_checkbox {
+    cursor: pointer;
+}
+
+.sign_up_section .sign_up_input_group .privacy_policy_checkbox_group .pp_checkbox:hover {
+    background-color: #EDF2FA;
+}
+
+/* span design inside input group */
 .sign_up_section .sign_up_input_group span {
     font-weight: 400;
     font-size: 14px;
